UseOnScreen now working without issue

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,3 +10,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.gallery-item {
+  height:100vh;
+}
+
+.animate-test {
+  width:20vmax;
+  height:20vmax;
+  margin:2vmax;
+  background-color:black;
+}
